--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <table cellspacing="60">
     <tr>
-      <td><img src="images/Jean.PNG" alt="Jean Profile Picture"></td>
+      <td><img src="Jean.PNG" alt="Jean Profile Picture"></td>
       <td>
         <h1><b>Jean Ferrante</b></h1>
         <p><em>Student</em></p>
