--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <table cellspacing="60">
   <tr>
-    <td><img src="jean.png" alt="Jean Profile Picture" class="jean"></td>
+    <td><img src="jean.PNG" alt="Jean Profile Picture" class="jean"></td>
     <td>
       <h1 id="myname"><b>Jean Ferrante</b></h1>
       <p><em>Student</em></p>
